Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21893

Can't sort errors (issues) by file

XMLWordPrintable

    • All
    • d6848fc83105d331cab3c63ffc3cd5e45d2f75e9

      When building, multiple cores are used and emit errors for different files simultaneously. The Issues panel shows the errors in chronological order as they come in. I'd rather be able to sort by file name, to see all errors in one file (sub sort by time), then all errors for the NEXT file, etc.

      see this forum topic for more info

        For Gerrit Dashboard: QTCREATORBUG-21893
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            davecotter David M. Cotter
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes