ProjectExplorer: Allow text filtering in issues pane

Task-number: QTCREATORBUG-21893
Fixes: QTCREATORBUG-22083
Change-Id: Ida227ce21d90fc2487cf3009e957eedeec507fd0
Reviewed-by: André Hartmann <aha_1980@gmx.de>